# sqltrace

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  debug_plan.json  docker-compose.yml  justfile
docs/: API.md  ARCHITECTURE.md  SETUP.md
docs/rfcs/: 0000-template.md  0001-postgresql-mvp.md
scripts/: init_db.sql  init_mysql.sql  init_sqlite.sql  sample_data.sql  sample_data_mysql.sql  sample_data_sqlite.sql  setup_test_db.sh
src/: error.rs  lib.rs  main.rs  server.rs
src/advisor/: mod.rs
src/benchmark/: mod.rs
src/db/: error.rs  mod.rs
src/db/engines/: mod.rs  mysql.rs  postgresql.rs  sqlite.rs
src/db/models/: mod.rs  plan.rs
src/ui/: mod.rs
src/web/: mod.rs
static/: index.html  script.js  styles.css
tests/: database_test.rs  integration_test.rs  test.env  test_utils.rs  tui_test.rs  ui_test.rs  web_api_test.rs
