[package]
name = "sqltrace-rs"
version = "0.1.0"
edition = "2021"
authors = ["Lokesh Kumar <lkumar94@gmail.com>"]
description = "A Terminal-Based SQL Visualizer & Advisor"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kumarlokesh/sqltrace-rs"

[profile.test]
# Ensure tests are run sequentially to avoid database deadlocks
test-threads = 1

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "migrate"], default-features = false }
ratatui = { version = "0.25.0", features = ["crossterm"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.27.0"
dotenv = "0.15"
uuid = { version = "1.8.0", features = ["v4"] }

# Enable offline mode for development
[package.metadata.sqlx]
offline = true

[dev-dependencies]
tempfile = "3.2"
assert_matches = "1.5"
