[package]
name = "sqltrace-rs"
version = "0.1.0"
edition = "2021"
authors = ["Lokesh Kumar <lkumar94@gmail.com>"]
description = "A high-performance, multi-database SQL query analyzer and optimizer"
license = "MIT"
repository = "https://github.com/kumarlokesh/sqltrace-rs"

[profile.test]
test-threads = 1

[dependencies]
tokio = { version = "1.0", features = ["full"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "migrate"], default-features = false }
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
uuid = { version = "1.8.0", features = ["v4"] }
sqlparser = "0.37.0"
async-trait = "0.1"

# Enable offline mode for development
[package.metadata.sqlx]
offline = true

[dev-dependencies]
tempfile = "3.2"
assert_matches = "1.5"
rstest = "0.18.1"
insta = "1.34.0"
axum-test = "14.0"
tokio-test = "0.4"
